Ajout de nouveau fichier et correction de certain bug

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -3,6 +3,7 @@
         <a href="/">Brichange</a>
     </div>
 
-    <a href="/profil">Profil</a>
+    <a href="/Sign-in">Se connecter</a>
+    <a href="/Sign-up">Créer un compte</a>
 
 </header>
