--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -1,26 +1,41 @@
 <div class="Sign-up-container">
     <h1>Créer un compte</h1>
     <form id="Sign-up-form" novalidate>
-        <input type="text" minlength="2" placeholder="Votre Nom" required>
-        <input type="text" minlength="2" placeholder="Votre Prénom" required>
-        <input type="email" id="email-up-form" placeholder="Votre email" required>
-
-        
-        <div class="password-container">
-            <input type="password" id="password-up-form" minlength="8" placeholder="Votre mot de passe" required>
-            <button type="button" id="opt-affichage" aria-label="Afficher ou masquer">👁️</button>
+        <div class="input-form-style">
+            <label for="Nom">Nom</label>
+            <input type="text" minlength="2" placeholder="Votre Nom" required>
         </div>
+        <div class="input-form-style">
+            <label for="Prénom">Prénom</label>
+            <input type="text" minlength="2" placeholder="Votre Prénom" required>
+        </div>
+        <div class="input-form-style">
+            <label for="Email">Email</label>
+            <input type="email" id="email-up-form" placeholder="Votre email" required>
+        </div>
+
+
+
+        <label for="password">Mot de passe</label>
+            <div class="input-password-form-style">
+                <input type="password" id="password-up-form" minlength="8" placeholder="Votre mot de passe" required>
+                <button type="button" id="opt-affichage" aria-label="Afficher ou masquer">👁️</button>
+            </div>
+
         <p id="rule-1" class="rule">Doit contenir au moins huit caractères.</p>
         <p id="rule-2" class="rule">Doit contenir au moins un caractère spécial.</p>
         <p id="rule-3" class="rule">Doit contenir au moins deux chiffres.</p>
 
-        
-        <div class="password-confirm-container">
-            <input type="password" id="password-up-confirm-form" minlength="8" placeholder="Confirmer mot de passe" required>
+
+        <label for="password">Confirmez votre mot de passe</label>
+        <div class="input-password-form-style">
+            <input type="password" id="password-up-confirm-form" minlength="8" placeholder="Confirmer mot de passe"
+                required>
             <button type="button" id="opt-affichage-confirm" aria-label="Afficher ou masquer">👁️</button>
-            <div id="status-password"></div>
         </div>
+        <div id="status-password"></div>
 
         <button type="submit"><span>Créer un compte</span></button>
+        <span>Vous avez déjà un compte <a href="/Sign-in" class="btn-sign-in">Se connecter</a> </span>
     </form>
 </div>
