--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -1,4 +1,4 @@
-<div class="Sign-up-container">
+<div class="Sign-container">
     <h1>Créer un compte</h1>
     <form id="Sign-up-form" novalidate>
         <div class="input-form-style">
