mise a jour apres connexion

--- a/views/echanges.handlebars
+++ b/views/echanges.handlebars
@@ -1,5 +1,5 @@
 <div class="Titre-Text">
-    <h1>Les échanges disponnibles </h1>
+    <h1>Les échanges disponibles </h1>
 </div>
 
 <ul id="echange-visu">
