--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -29,7 +29,7 @@ header a {
     font-weight: bold;
     font-size: 3rem;
     letter-spacing: 2px;
-    background-color: rgb(255, 251, 4);
+    background-color: #fffb04;
     filter: drop-shadow(0 0 1px black);
 }
 
@@ -266,20 +266,76 @@ input[type=checkbox]:checked+p {
     color: green;
 }
 
-.input-form-style label {
+.Sign-section {
+    padding: 50px 0;
+    text-align: center;
+}
+
+.Sign-container {
+    background-color: #fffb04;
+    max-width: 8000px;
+    margin: 0 auto;
+    border-radius: 15px;
+}
+
+.Sign-form {
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+.Sign-up-form {
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+.Sign-form label {
     display: block;
     margin-bottom: 5px;
     color: #333;
     font-weight: bold;
 }
 
-.input-form-style input {
+.Sign-form input {
     width: 100%;
     padding: 10px;
     font-size: 1rem;
     border: 2px solid #000;
     border-radius: 5px;
     outline: none;
+}
+
+.Sign-up-form input {
+    width: 100%;
+    padding: 10px;
+    font-size: 1rem;
+    border: 2px solid #000;
+    border-radius: 5px;
+    outline: none;
+}
+
+.Sign-btn {
+    background: #ff0808;
+    color: #fffb04;
+    padding: 10px 20px;
+    border-radius: 20px;
+    text-decoration: none;
+    text-align: center;
+    padding: 10px;
+    width: auto;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+
+.Sign-up-form label {
+    display: block;
+    margin-bottom: 5px;
+    color: #333;
+    font-weight: bold;
 }
 
 .input-password-form-style {
@@ -288,20 +344,12 @@ input[type=checkbox]:checked+p {
     align-items: center;
 }
 
+
 .Sign-container label {
     display: block;
     margin-bottom: 5px;
     color: #333;
     font-weight: bold;
-}
-
-.input-password-form-style input {
-    width: 100%;
-    padding: 10px;
-    font-size: 1rem;
-    border: 2px solid #000;
-    border-radius: 5px;
-    outline: none;
 }
 
 #opt-affichage {
@@ -323,4 +371,3 @@ input[type=checkbox]:checked+p {
     font-size: 1.2rem;
     padding: 5px;
 }
-
